<resources>
    <string name="app_name">TableTennis</string>
    <string name="menu">Menu</string>
    <string name="start_ovo_game">One on One</string>
    <string name="start_tvt_game">Team to Team</string>
    <string name="exit_app">Exit app</string>
    <string name="add_player">Add player</string>
    <string name="score">Score</string>

    <string name="player_hint">Player</string>

    <string name="set_name">Set name</string>
    <string name="choose_gender">Choose your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="thing">Genderfluid helisexual</string>

    <string name="player_name">Player name: %s</string>
    <string name="player_wins">Wins: %d</string>
    <string name="player_loses">Loses: %d</string>
    <string name="player_win_rate">Win rate: %.2f</string>

    <string name="ovo_teams_name">%s</string>
    <string name="tvt_teams_name">%s\n%s</string>

    <string name="hint_zero">0</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="player_one_won">Player one won</string>
    <string name="player_two_won">Player two won</string>
    <string name="choose_players">Choose your players</string>
    <string name="another_players">Choose another players</string>

    <string name="team_one">Team one</string>
    <string name="team_two">Team two</string>

    <string name="empty_message">No players</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello tp fragment</string>
    <string name="hello_game_fragment">Game</string>
</resources>