<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/score_player_item"
    app:cardCornerRadius="10dp"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_player_avatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/avatar_alien"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/iv_player_avatar"
            app:layout_constraintTop_toTopOf="@id/iv_player_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_wins"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/iv_player_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_player_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_loses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_loses"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/iv_player_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_player_wins" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_win_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_win_rate"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/iv_player_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_player_loses" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>