<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.MainFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textAllCaps="true"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="@id/tv_menu"
        app:layout_constraintStart_toStartOf="@id/tv_menu"
        app:layout_constraintTop_toBottomOf="@id/tv_menu" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="@id/btn_start_game"
        app:layout_constraintStart_toStartOf="@id/btn_start_game"
        app:layout_constraintTop_toBottomOf="@id/btn_start_game" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exit_app"
        app:layout_constraintEnd_toEndOf="@id/btn_score"
        app:layout_constraintStart_toStartOf="@id/btn_score"
        app:layout_constraintTop_toBottomOf="@id/btn_score" />

</androidx.constraintlayout.widget.ConstraintLayout>