<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.create_player.CreatePlayerFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/avatar_male"
        app:layout_constraintEnd_toStartOf="@id/iv_female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/avatar_female"
        app:layout_constraintEnd_toStartOf="@id/iv_alien"
        app:layout_constraintStart_toEndOf="@id/iv_male"
        app:layout_constraintTop_toTopOf="@id/iv_male" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_alien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:src="@drawable/avatar_alien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_female"
        app:layout_constraintTop_toTopOf="@id/iv_female" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/iv_male"
        app:layout_constraintStart_toStartOf="@id/iv_male"
        app:layout_constraintTop_toBottomOf="@id/iv_male" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/iv_female"
        app:layout_constraintStart_toStartOf="@id/iv_female"
        app:layout_constraintTop_toBottomOf="@id/iv_female" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_alien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxWidth="100dp"
        android:text="@string/thing"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/iv_alien"
        app:layout_constraintStart_toStartOf="@id/iv_alien"
        app:layout_constraintTop_toBottomOf="@id/iv_alien" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:hint="@string/set_name"
        android:minWidth="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_female" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_choose_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_gender"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/et_player_name"
        app:layout_constraintStart_toStartOf="@id/et_player_name"
        app:layout_constraintTop_toBottomOf="@id/et_player_name" />

    <RadioGroup
        android:id="@+id/rbtn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_choose_gender"
        app:layout_constraintStart_toStartOf="@id/tv_choose_gender"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_gender">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtn_alien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thing"
            android:textSize="20sp" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>