<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.set_player.SetPlayerFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_player_one_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/player_one"
        app:layout_constraintEnd_toStartOf="@id/tv_player_two_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_player_two_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_player_one_hint"
        app:layout_constraintTop_toTopOf="@id/tv_player_one_hint" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_player_one_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="@id/tv_player_one_hint"
        app:layout_constraintStart_toStartOf="@id/tv_player_one_hint"
        app:layout_constraintTop_toBottomOf="@id/tv_player_one_hint" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_player_two_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="@id/tv_player_two_hint"
        app:layout_constraintStart_toStartOf="@id/tv_player_two_hint"
        app:layout_constraintTop_toBottomOf="@id/tv_player_two_hint" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_player_one_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/iv_player_one_avatar"
        app:layout_constraintStart_toStartOf="@id/iv_player_one_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_player_one_avatar"
        tools:hint="@string/player_hint" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_player_two_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/iv_player_two_avatar"
        app:layout_constraintStart_toStartOf="@id/iv_player_two_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_player_two_avatar"
        tools:hint="@string/player_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_player_one_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/rv_players"
        app:layout_constraintEnd_toEndOf="@id/rv_players"
        app:layout_constraintStart_toStartOf="@id/rv_players"
        app:layout_constraintTop_toTopOf="@id/rv_players" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/abtn_create_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>